Proyecto3/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM instruction
Rule 2     instruction -> block
Rule 3     instruction -> ifInst
Rule 4     instruction -> forInst
Rule 5     instruction -> whileInst
Rule 6     instruction -> repeatInst
Rule 7     instruction -> scanInst
Rule 8     instruction -> printInst
Rule 9     instruction -> identifier ASSIGN expression
Rule 10    block -> LCURLY usingInInst RCURLY
Rule 11    block -> LCURLY instructionBlock RCURLY
Rule 12    usingInInst -> USING declarationBlock IN instructionBlock
Rule 13    declarationBlock -> type idList SEMICOLON declarationBlock
Rule 14    declarationBlock -> type idList SEMICOLON
Rule 15    type -> INT
Rule 16    type -> BOOL
Rule 17    type -> SET
Rule 18    idList -> IDENTIFIER COMMA idList
Rule 19    idList -> IDENTIFIER
Rule 20    instructionBlock -> instruction SEMICOLON instructionBlock
Rule 21    instructionBlock -> <empty>
Rule 22    ifInst -> IF LPAREN expression RPAREN instruction
Rule 23    ifInst -> IF LPAREN expression RPAREN instruction ELSE instruction
Rule 24    forInst -> FOR expression direction expression DO instruction
Rule 25    direction -> MIN
Rule 26    direction -> MAX
Rule 27    whileInst -> WHILE LPAREN expression RPAREN DO instruction
Rule 28    whileInst -> WHILE LPAREN expression RPAREN
Rule 29    repeatInst -> REPEAT instruction whileInst
Rule 30    scanInst -> SCAN expression
Rule 31    printInst -> PRINT outputType
Rule 32    printInst -> PRINTLN outputType
Rule 33    outputType -> expression COMMA outputType
Rule 34    outputType -> expression
Rule 35    outputType -> string COMMA outputType
Rule 36    outputType -> string
Rule 37    string -> STRING
Rule 38    expression -> expression PLUS expression
Rule 39    expression -> expression MINUS expression
Rule 40    expression -> expression TIMES expression
Rule 41    expression -> expression DIVIDE expression
Rule 42    expression -> expression MODULE expression
Rule 43    expression -> expression AND expression
Rule 44    expression -> expression OR expression
Rule 45    expression -> expression LESSTHAN expression
Rule 46    expression -> expression LESSEQUALTHAN expression
Rule 47    expression -> expression GREATERTHAN expression
Rule 48    expression -> expression GREATEREQUALTHAN expression
Rule 49    expression -> expression EQUALS expression
Rule 50    expression -> expression NOTEQUALS expression
Rule 51    expression -> expression SETUNION expression
Rule 52    expression -> expression SETDIFF expression
Rule 53    expression -> expression SETINTERSECT expression
Rule 54    expression -> expression SETMAPPLUS expression
Rule 55    expression -> expression SETMAPMINUS expression
Rule 56    expression -> expression SETMAPTIMES expression
Rule 57    expression -> expression SETMAPDIVIDE expression
Rule 58    expression -> expression SETMAPMODULE expression
Rule 59    expression -> expression BELONGSTO expression
Rule 60    expression -> NOT expression
Rule 61    expression -> SETMINVALUE expression
Rule 62    expression -> SETMAXVALUE expression
Rule 63    expression -> SETSIZE expression
Rule 64    expression -> MINUS expression
Rule 65    expression -> LPAREN expression RPAREN
Rule 66    expression -> booleanValue
Rule 67    expression -> set
Rule 68    expression -> identifier
Rule 69    expression -> number
Rule 70    booleanValue -> TRUE
Rule 71    booleanValue -> FALSE
Rule 72    identifier -> IDENTIFIER
Rule 73    set -> LCURLY setNumbers RCURLY
Rule 74    set -> LCURLY RCURLY
Rule 75    setNumbers -> expression COMMA setNumbers
Rule 76    setNumbers -> expression
Rule 77    number -> NUMBER

Terminals, with rules where they appear

AND                  : 43
ASSIGN               : 9
BELONGSTO            : 59
BOOL                 : 16
COMMA                : 18 33 35 75
DIVIDE               : 41
DO                   : 24 27
ELSE                 : 23
EQUALS               : 49
FALSE                : 71
FOR                  : 24
GREATEREQUALTHAN     : 48
GREATERTHAN          : 47
IDENTIFIER           : 18 19 72
IF                   : 22 23
IN                   : 12
INT                  : 15
LCURLY               : 10 11 73 74
LESSEQUALTHAN        : 46
LESSTHAN             : 45
LPAREN               : 22 23 27 28 65
MAX                  : 26
MIN                  : 25
MINUS                : 39 64
MODULE               : 42
NOT                  : 60
NOTEQUALS            : 50
NUMBER               : 77
OR                   : 44
PLUS                 : 38
PRINT                : 31
PRINTLN              : 32
PROGRAM              : 1
RCURLY               : 10 11 73 74
REPEAT               : 29
RPAREN               : 22 23 27 28 65
SCAN                 : 30
SEMICOLON            : 13 14 20
SET                  : 17
SETDIFF              : 52
SETINTERSECT         : 53
SETMAPDIVIDE         : 57
SETMAPMINUS          : 55
SETMAPMODULE         : 58
SETMAPPLUS           : 54
SETMAPTIMES          : 56
SETMAXVALUE          : 62
SETMINVALUE          : 61
SETSIZE              : 63
SETUNION             : 51
STRING               : 37
TIMES                : 40
TRUE                 : 70
USING                : 12
WHILE                : 27 28
error                : 

Nonterminals, with rules where they appear

block                : 2
booleanValue         : 66
declarationBlock     : 12 13
direction            : 24
expression           : 9 22 23 24 24 27 28 30 33 34 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61 62 63 64 65 75 76
forInst              : 4
idList               : 13 14 18
identifier           : 9 68
ifInst               : 3
instruction          : 1 20 22 23 23 24 27 29
instructionBlock     : 11 12 20
number               : 69
outputType           : 31 32 33 35
printInst            : 8
program              : 0
repeatInst           : 6
scanInst             : 7
set                  : 67
setNumbers           : 73 75
string               : 35 36
type                 : 13 14
usingInInst          : 10
whileInst            : 5 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM instruction

    PROGRAM         shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> PROGRAM . instruction
    (2) instruction -> . block
    (3) instruction -> . ifInst
    (4) instruction -> . forInst
    (5) instruction -> . whileInst
    (6) instruction -> . repeatInst
    (7) instruction -> . scanInst
    (8) instruction -> . printInst
    (9) instruction -> . identifier ASSIGN expression
    (10) block -> . LCURLY usingInInst RCURLY
    (11) block -> . LCURLY instructionBlock RCURLY
    (22) ifInst -> . IF LPAREN expression RPAREN instruction
    (23) ifInst -> . IF LPAREN expression RPAREN instruction ELSE instruction
    (24) forInst -> . FOR expression direction expression DO instruction
    (27) whileInst -> . WHILE LPAREN expression RPAREN DO instruction
    (28) whileInst -> . WHILE LPAREN expression RPAREN
    (29) repeatInst -> . REPEAT instruction whileInst
    (30) scanInst -> . SCAN expression
    (31) printInst -> . PRINT outputType
    (32) printInst -> . PRINTLN outputType
    (72) identifier -> . IDENTIFIER

    LCURLY          shift and go to state 7
    IF              shift and go to state 17
    FOR             shift and go to state 16
    WHILE           shift and go to state 8
    REPEAT          shift and go to state 15
    SCAN            shift and go to state 5
    PRINT           shift and go to state 10
    PRINTLN         shift and go to state 12
    IDENTIFIER      shift and go to state 13

    instruction                    shift and go to state 3
    forInst                        shift and go to state 4
    repeatInst                     shift and go to state 18
    printInst                      shift and go to state 6
    scanInst                       shift and go to state 9
    whileInst                      shift and go to state 11
    identifier                     shift and go to state 20
    block                          shift and go to state 19
    ifInst                         shift and go to state 14

state 2

    (0) S' -> program .



state 3

    (1) program -> PROGRAM instruction .

    $end            reduce using rule 1 (program -> PROGRAM instruction .)


state 4

    (4) instruction -> forInst .

    SEMICOLON       reduce using rule 4 (instruction -> forInst .)
    ELSE            reduce using rule 4 (instruction -> forInst .)
    $end            reduce using rule 4 (instruction -> forInst .)
    WHILE           reduce using rule 4 (instruction -> forInst .)


state 5

    (30) scanInst -> SCAN . expression
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression MODULE expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression LESSTHAN expression
    (46) expression -> . expression LESSEQUALTHAN expression
    (47) expression -> . expression GREATERTHAN expression
    (48) expression -> . expression GREATEREQUALTHAN expression
    (49) expression -> . expression EQUALS expression
    (50) expression -> . expression NOTEQUALS expression
    (51) expression -> . expression SETUNION expression
    (52) expression -> . expression SETDIFF expression
    (53) expression -> . expression SETINTERSECT expression
    (54) expression -> . expression SETMAPPLUS expression
    (55) expression -> . expression SETMAPMINUS expression
    (56) expression -> . expression SETMAPTIMES expression
    (57) expression -> . expression SETMAPDIVIDE expression
    (58) expression -> . expression SETMAPMODULE expression
    (59) expression -> . expression BELONGSTO expression
    (60) expression -> . NOT expression
    (61) expression -> . SETMINVALUE expression
    (62) expression -> . SETMAXVALUE expression
    (63) expression -> . SETSIZE expression
    (64) expression -> . MINUS expression
    (65) expression -> . LPAREN expression RPAREN
    (66) expression -> . booleanValue
    (67) expression -> . set
    (68) expression -> . identifier
    (69) expression -> . number
    (70) booleanValue -> . TRUE
    (71) booleanValue -> . FALSE
    (73) set -> . LCURLY setNumbers RCURLY
    (74) set -> . LCURLY RCURLY
    (72) identifier -> . IDENTIFIER
    (77) number -> . NUMBER

    NOT             shift and go to state 33
    SETMINVALUE     shift and go to state 22
    SETMAXVALUE     shift and go to state 29
    SETSIZE         shift and go to state 32
    MINUS           shift and go to state 27
    LPAREN          shift and go to state 30
    TRUE            shift and go to state 26
    FALSE           shift and go to state 31
    LCURLY          shift and go to state 24
    IDENTIFIER      shift and go to state 13
    NUMBER          shift and go to state 28

    set                            shift and go to state 21
    identifier                     shift and go to state 34
    number                         shift and go to state 23
    booleanValue                   shift and go to state 25
    expression                     shift and go to state 35

state 6

    (8) instruction -> printInst .

    SEMICOLON       reduce using rule 8 (instruction -> printInst .)
    ELSE            reduce using rule 8 (instruction -> printInst .)
    $end            reduce using rule 8 (instruction -> printInst .)
    WHILE           reduce using rule 8 (instruction -> printInst .)


state 7

    (10) block -> LCURLY . usingInInst RCURLY
    (11) block -> LCURLY . instructionBlock RCURLY
    (12) usingInInst -> . USING declarationBlock IN instructionBlock
    (20) instructionBlock -> . instruction SEMICOLON instructionBlock
    (21) instructionBlock -> .
    (2) instruction -> . block
    (3) instruction -> . ifInst
    (4) instruction -> . forInst
    (5) instruction -> . whileInst
    (6) instruction -> . repeatInst
    (7) instruction -> . scanInst
    (8) instruction -> . printInst
    (9) instruction -> . identifier ASSIGN expression
    (10) block -> . LCURLY usingInInst RCURLY
    (11) block -> . LCURLY instructionBlock RCURLY
    (22) ifInst -> . IF LPAREN expression RPAREN instruction
    (23) ifInst -> . IF LPAREN expression RPAREN instruction ELSE instruction
    (24) forInst -> . FOR expression direction expression DO instruction
    (27) whileInst -> . WHILE LPAREN expression RPAREN DO instruction
    (28) whileInst -> . WHILE LPAREN expression RPAREN
    (29) repeatInst -> . REPEAT instruction whileInst
    (30) scanInst -> . SCAN expression
    (31) printInst -> . PRINT outputType
    (32) printInst -> . PRINTLN outputType
    (72) identifier -> . IDENTIFIER

    USING           shift and go to state 39
    RCURLY          reduce using rule 21 (instructionBlock -> .)
    LCURLY          shift and go to state 7
    IF              shift and go to state 17
    FOR             shift and go to state 16
    WHILE           shift and go to state 8
    REPEAT          shift and go to state 15
    SCAN            shift and go to state 5
    PRINT           shift and go to state 10
    PRINTLN         shift and go to state 12
    IDENTIFIER      shift and go to state 13

    printInst                      shift and go to state 6
    instruction                    shift and go to state 37
    forInst                        shift and go to state 4
    instructionBlock               shift and go to state 36
    scanInst                       shift and go to state 9
    identifier                     shift and go to state 20
    usingInInst                    shift and go to state 38
    repeatInst                     shift and go to state 18
    whileInst                      shift and go to state 11
    block                          shift and go to state 19
    ifInst                         shift and go to state 14

state 8

    (27) whileInst -> WHILE . LPAREN expression RPAREN DO instruction
    (28) whileInst -> WHILE . LPAREN expression RPAREN

    LPAREN          shift and go to state 40


state 9

    (7) instruction -> scanInst .

    SEMICOLON       reduce using rule 7 (instruction -> scanInst .)
    ELSE            reduce using rule 7 (instruction -> scanInst .)
    $end            reduce using rule 7 (instruction -> scanInst .)
    WHILE           reduce using rule 7 (instruction -> scanInst .)


state 10

    (31) printInst -> PRINT . outputType
    (33) outputType -> . expression COMMA outputType
    (34) outputType -> . expression
    (35) outputType -> . string COMMA outputType
    (36) outputType -> . string
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression MODULE expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression LESSTHAN expression
    (46) expression -> . expression LESSEQUALTHAN expression
    (47) expression -> . expression GREATERTHAN expression
    (48) expression -> . expression GREATEREQUALTHAN expression
    (49) expression -> . expression EQUALS expression
    (50) expression -> . expression NOTEQUALS expression
    (51) expression -> . expression SETUNION expression
    (52) expression -> . expression SETDIFF expression
    (53) expression -> . expression SETINTERSECT expression
    (54) expression -> . expression SETMAPPLUS expression
    (55) expression -> . expression SETMAPMINUS expression
    (56) expression -> . expression SETMAPTIMES expression
    (57) expression -> . expression SETMAPDIVIDE expression
    (58) expression -> . expression SETMAPMODULE expression
    (59) expression -> . expression BELONGSTO expression
    (60) expression -> . NOT expression
    (61) expression -> . SETMINVALUE expression
    (62) expression -> . SETMAXVALUE expression
    (63) expression -> . SETSIZE expression
    (64) expression -> . MINUS expression
    (65) expression -> . LPAREN expression RPAREN
    (66) expression -> . booleanValue
    (67) expression -> . set
    (68) expression -> . identifier
    (69) expression -> . number
    (37) string -> . STRING
    (70) booleanValue -> . TRUE
    (71) booleanValue -> . FALSE
    (73) set -> . LCURLY setNumbers RCURLY
    (74) set -> . LCURLY RCURLY
    (72) identifier -> . IDENTIFIER
    (77) number -> . NUMBER

    NOT             shift and go to state 33
    SETMINVALUE     shift and go to state 22
    SETMAXVALUE     shift and go to state 29
    SETSIZE         shift and go to state 32
    MINUS           shift and go to state 27
    LPAREN          shift and go to state 30
    STRING          shift and go to state 42
    TRUE            shift and go to state 26
    FALSE           shift and go to state 31
    LCURLY          shift and go to state 24
    IDENTIFIER      shift and go to state 13
    NUMBER          shift and go to state 28

    set                            shift and go to state 21
    string                         shift and go to state 43
    identifier                     shift and go to state 34
    outputType                     shift and go to state 41
    number                         shift and go to state 23
    booleanValue                   shift and go to state 25
    expression                     shift and go to state 44

state 11

    (5) instruction -> whileInst .

    SEMICOLON       reduce using rule 5 (instruction -> whileInst .)
    ELSE            reduce using rule 5 (instruction -> whileInst .)
    $end            reduce using rule 5 (instruction -> whileInst .)
    WHILE           reduce using rule 5 (instruction -> whileInst .)


state 12

    (32) printInst -> PRINTLN . outputType
    (33) outputType -> . expression COMMA outputType
    (34) outputType -> . expression
    (35) outputType -> . string COMMA outputType
    (36) outputType -> . string
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression MODULE expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression LESSTHAN expression
    (46) expression -> . expression LESSEQUALTHAN expression
    (47) expression -> . expression GREATERTHAN expression
    (48) expression -> . expression GREATEREQUALTHAN expression
    (49) expression -> . expression EQUALS expression
    (50) expression -> . expression NOTEQUALS expression
    (51) expression -> . expression SETUNION expression
    (52) expression -> . expression SETDIFF expression
    (53) expression -> . expression SETINTERSECT expression
    (54) expression -> . expression SETMAPPLUS expression
    (55) expression -> . expression SETMAPMINUS expression
    (56) expression -> . expression SETMAPTIMES expression
    (57) expression -> . expression SETMAPDIVIDE expression
    (58) expression -> . expression SETMAPMODULE expression
    (59) expression -> . expression BELONGSTO expression
    (60) expression -> . NOT expression
    (61) expression -> . SETMINVALUE expression
    (62) expression -> . SETMAXVALUE expression
    (63) expression -> . SETSIZE expression
    (64) expression -> . MINUS expression
    (65) expression -> . LPAREN expression RPAREN
    (66) expression -> . booleanValue
    (67) expression -> . set
    (68) expression -> . identifier
    (69) expression -> . number
    (37) string -> . STRING
    (70) booleanValue -> . TRUE
    (71) booleanValue -> . FALSE
    (73) set -> . LCURLY setNumbers RCURLY
    (74) set -> . LCURLY RCURLY
    (72) identifier -> . IDENTIFIER
    (77) number -> . NUMBER

    NOT             shift and go to state 33
    SETMINVALUE     shift and go to state 22
    SETMAXVALUE     shift and go to state 29
    SETSIZE         shift and go to state 32
    MINUS           shift and go to state 27
    LPAREN          shift and go to state 30
    STRING          shift and go to state 42
    TRUE            shift and go to state 26
    FALSE           shift and go to state 31
    LCURLY          shift and go to state 24
    IDENTIFIER      shift and go to state 13
    NUMBER          shift and go to state 28

    set                            shift and go to state 21
    string                         shift and go to state 43
    identifier                     shift and go to state 34
    outputType                     shift and go to state 45
    number                         shift and go to state 23
    booleanValue                   shift and go to state 25
    expression                     shift and go to state 44

state 13

    (72) identifier -> IDENTIFIER .

    DO              reduce using rule 72 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 72 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 72 (identifier -> IDENTIFIER .)
    TIMES           reduce using rule 72 (identifier -> IDENTIFIER .)
    DIVIDE          reduce using rule 72 (identifier -> IDENTIFIER .)
    MODULE          reduce using rule 72 (identifier -> IDENTIFIER .)
    AND             reduce using rule 72 (identifier -> IDENTIFIER .)
    OR              reduce using rule 72 (identifier -> IDENTIFIER .)
    LESSTHAN        reduce using rule 72 (identifier -> IDENTIFIER .)
    LESSEQUALTHAN   reduce using rule 72 (identifier -> IDENTIFIER .)
    GREATERTHAN     reduce using rule 72 (identifier -> IDENTIFIER .)
    GREATEREQUALTHAN reduce using rule 72 (identifier -> IDENTIFIER .)
    EQUALS          reduce using rule 72 (identifier -> IDENTIFIER .)
    NOTEQUALS       reduce using rule 72 (identifier -> IDENTIFIER .)
    SETUNION        reduce using rule 72 (identifier -> IDENTIFIER .)
    SETDIFF         reduce using rule 72 (identifier -> IDENTIFIER .)
    SETINTERSECT    reduce using rule 72 (identifier -> IDENTIFIER .)
    SETMAPPLUS      reduce using rule 72 (identifier -> IDENTIFIER .)
    SETMAPMINUS     reduce using rule 72 (identifier -> IDENTIFIER .)
    SETMAPTIMES     reduce using rule 72 (identifier -> IDENTIFIER .)
    SETMAPDIVIDE    reduce using rule 72 (identifier -> IDENTIFIER .)
    SETMAPMODULE    reduce using rule 72 (identifier -> IDENTIFIER .)
    BELONGSTO       reduce using rule 72 (identifier -> IDENTIFIER .)
    $end            reduce using rule 72 (identifier -> IDENTIFIER .)
    SEMICOLON       reduce using rule 72 (identifier -> IDENTIFIER .)
    WHILE           reduce using rule 72 (identifier -> IDENTIFIER .)
    ELSE            reduce using rule 72 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 72 (identifier -> IDENTIFIER .)
    MIN             reduce using rule 72 (identifier -> IDENTIFIER .)
    MAX             reduce using rule 72 (identifier -> IDENTIFIER .)
    RCURLY          reduce using rule 72 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 72 (identifier -> IDENTIFIER .)
    ASSIGN          reduce using rule 72 (identifier -> IDENTIFIER .)


state 14

    (3) instruction -> ifInst .

    SEMICOLON       reduce using rule 3 (instruction -> ifInst .)
    ELSE            reduce using rule 3 (instruction -> ifInst .)
    $end            reduce using rule 3 (instruction -> ifInst .)
    WHILE           reduce using rule 3 (instruction -> ifInst .)


state 15

    (29) repeatInst -> REPEAT . instruction whileInst
    (2) instruction -> . block
    (3) instruction -> . ifInst
    (4) instruction -> . forInst
    (5) instruction -> . whileInst
    (6) instruction -> . repeatInst
    (7) instruction -> . scanInst
    (8) instruction -> . printInst
    (9) instruction -> . identifier ASSIGN expression
    (10) block -> . LCURLY usingInInst RCURLY
    (11) block -> . LCURLY instructionBlock RCURLY
    (22) ifInst -> . IF LPAREN expression RPAREN instruction
    (23) ifInst -> . IF LPAREN expression RPAREN instruction ELSE instruction
    (24) forInst -> . FOR expression direction expression DO instruction
    (27) whileInst -> . WHILE LPAREN expression RPAREN DO instruction
    (28) whileInst -> . WHILE LPAREN expression RPAREN
    (29) repeatInst -> . REPEAT instruction whileInst
    (30) scanInst -> . SCAN expression
    (31) printInst -> . PRINT outputType
    (32) printInst -> . PRINTLN outputType
    (72) identifier -> . IDENTIFIER

    LCURLY          shift and go to state 7
    IF              shift and go to state 17
    FOR             shift and go to state 16
    WHILE           shift and go to state 8
    REPEAT          shift and go to state 15
    SCAN            shift and go to state 5
    PRINT           shift and go to state 10
    PRINTLN         shift and go to state 12
    IDENTIFIER      shift and go to state 13

    instruction                    shift and go to state 46
    forInst                        shift and go to state 4
    repeatInst                     shift and go to state 18
    printInst                      shift and go to state 6
    scanInst                       shift and go to state 9
    whileInst                      shift and go to state 11
    identifier                     shift and go to state 20
    block                          shift and go to state 19
    ifInst                         shift and go to state 14

state 16

    (24) forInst -> FOR . expression direction expression DO instruction
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression MODULE expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression LESSTHAN expression
    (46) expression -> . expression LESSEQUALTHAN expression
    (47) expression -> . expression GREATERTHAN expression
    (48) expression -> . expression GREATEREQUALTHAN expression
    (49) expression -> . expression EQUALS expression
    (50) expression -> . expression NOTEQUALS expression
    (51) expression -> . expression SETUNION expression
    (52) expression -> . expression SETDIFF expression
    (53) expression -> . expression SETINTERSECT expression
    (54) expression -> . expression SETMAPPLUS expression
    (55) expression -> . expression SETMAPMINUS expression
    (56) expression -> . expression SETMAPTIMES expression
    (57) expression -> . expression SETMAPDIVIDE expression
    (58) expression -> . expression SETMAPMODULE expression
    (59) expression -> . expression BELONGSTO expression
    (60) expression -> . NOT expression
    (61) expression -> . SETMINVALUE expression
    (62) expression -> . SETMAXVALUE expression
    (63) expression -> . SETSIZE expression
    (64) expression -> . MINUS expression
    (65) expression -> . LPAREN expression RPAREN
    (66) expression -> . booleanValue
    (67) expression -> . set
    (68) expression -> . identifier
    (69) expression -> . number
    (70) booleanValue -> . TRUE
    (71) booleanValue -> . FALSE
    (73) set -> . LCURLY setNumbers RCURLY
    (74) set -> . LCURLY RCURLY
    (72) identifier -> . IDENTIFIER
    (77) number -> . NUMBER

    NOT             shift and go to state 33
    SETMINVALUE     shift and go to state 22
    SETMAXVALUE     shift and go to state 29
    SETSIZE         shift and go to state 32
    MINUS           shift and go to state 27
    LPAREN          shift and go to state 30
    TRUE            shift and go to state 26
    FALSE           shift and go to state 31
    LCURLY          shift and go to state 24
    IDENTIFIER      shift and go to state 13
    NUMBER          shift and go to state 28

    set                            shift and go to state 21
    identifier                     shift and go to state 34
    number                         shift and go to state 23
    booleanValue                   shift and go to state 25
    expression                     shift and go to state 47

state 17

    (22) ifInst -> IF . LPAREN expression RPAREN instruction
    (23) ifInst -> IF . LPAREN expression RPAREN instruction ELSE instruction

    LPAREN          shift and go to state 48


state 18

    (6) instruction -> repeatInst .

    SEMICOLON       reduce using rule 6 (instruction -> repeatInst .)
    ELSE            reduce using rule 6 (instruction -> repeatInst .)
    $end            reduce using rule 6 (instruction -> repeatInst .)
    WHILE           reduce using rule 6 (instruction -> repeatInst .)


state 19

    (2) instruction -> block .

    SEMICOLON       reduce using rule 2 (instruction -> block .)
    ELSE            reduce using rule 2 (instruction -> block .)
    $end            reduce using rule 2 (instruction -> block .)
    WHILE           reduce using rule 2 (instruction -> block .)


state 20

    (9) instruction -> identifier . ASSIGN expression

    ASSIGN          shift and go to state 49


state 21

    (67) expression -> set .

    PLUS            reduce using rule 67 (expression -> set .)
    MINUS           reduce using rule 67 (expression -> set .)
    TIMES           reduce using rule 67 (expression -> set .)
    DIVIDE          reduce using rule 67 (expression -> set .)
    MODULE          reduce using rule 67 (expression -> set .)
    AND             reduce using rule 67 (expression -> set .)
    OR              reduce using rule 67 (expression -> set .)
    LESSTHAN        reduce using rule 67 (expression -> set .)
    LESSEQUALTHAN   reduce using rule 67 (expression -> set .)
    GREATERTHAN     reduce using rule 67 (expression -> set .)
    GREATEREQUALTHAN reduce using rule 67 (expression -> set .)
    EQUALS          reduce using rule 67 (expression -> set .)
    NOTEQUALS       reduce using rule 67 (expression -> set .)
    SETUNION        reduce using rule 67 (expression -> set .)
    SETDIFF         reduce using rule 67 (expression -> set .)
    SETINTERSECT    reduce using rule 67 (expression -> set .)
    SETMAPPLUS      reduce using rule 67 (expression -> set .)
    SETMAPMINUS     reduce using rule 67 (expression -> set .)
    SETMAPTIMES     reduce using rule 67 (expression -> set .)
    SETMAPDIVIDE    reduce using rule 67 (expression -> set .)
    SETMAPMODULE    reduce using rule 67 (expression -> set .)
    BELONGSTO       reduce using rule 67 (expression -> set .)
    $end            reduce using rule 67 (expression -> set .)
    SEMICOLON       reduce using rule 67 (expression -> set .)
    WHILE           reduce using rule 67 (expression -> set .)
    ELSE            reduce using rule 67 (expression -> set .)
    COMMA           reduce using rule 67 (expression -> set .)
    MIN             reduce using rule 67 (expression -> set .)
    MAX             reduce using rule 67 (expression -> set .)
    RCURLY          reduce using rule 67 (expression -> set .)
    RPAREN          reduce using rule 67 (expression -> set .)
    DO              reduce using rule 67 (expression -> set .)


state 22

    (61) expression -> SETMINVALUE . expression
    (38) expression -> . expression PLUS expression
    (39) expression -> . expression MINUS expression
    (40) expression -> . expression TIMES expression
    (41) expression -> . expression DIVIDE expression
    (42) expression -> . expression MODULE expression
    (43) expression -> . expression AND expression
    (44) expression -> . expression OR expression
    (45) expression -> . expression LESSTHAN expression
    (46) expression -> . expression LESSEQUALTHAN expression
    (47) expression -> . expression GREATERTHAN expression
    (48) expression -> . expression GREATEREQUALTHAN expression
    (49) expression -> . expression EQUALS expression
    (50) expression -> . expression NOTEQUALS expression
    (51) expression -> . expression SETUNION expression
    (52) expression -> . expression SETDIFF expression
    (53) expression -> . expression SETINTERSECT expression
    (54) expression -> . expression SETMAPPLUS expression
    (55) expression -> . expression SETMAPMINUS expression
    (56) expression -> . expression SETMAPTIMES expression
    (57) expression -> . expression SETMAPDIVIDE expression
    (58) expression -> . expression SETMAPMODULE expression
    (59) expression -> . expression BELONGSTO expression
    (60) expression -> . NOT expression
    (61) expression -> . SETMINVALUE expression
    (62) expression -> . SETMAXVALUE expression
    (63) expression -> . SETSIZE expression
    (64) expression -> . MINUS expression
    (65) expression -> . LPAREN expression RPAREN
    (66) expression -> . booleanValue
    (67) expression -> . set
    (68) expression -> . identifier
    (69) expression -> . number
    (70) booleanValue -> . TRUE
    (71) booleanValue -> . FALSE
    (73) set -> . LCURLY setNumbers RCURLY
    (74) set -> . LCURLY RCURLY
    (72) identifier -> . IDENTIFIER
    (77) number -> . NUMBER

    NOT             shift and go to state 33
    SETMINVALUE     shift and go to state 22
    SETMAXVALUE     shift and go to state 29
    SETSIZE         shift and go to state 32
    MINUS           shift and go to state 27
    LPAREN          shift and go to state 30
    TRUE            shift and go to state 26
    FALSE           shift and go to state 31
    LCURLY          shift and go to state 24
    IDENTIFIER      shift and go to state 13
    NUMBER          shift and go to state 28

    set                            shift and go to state 21
    identifier                     shift and go to state 34
    number                         shift and go to state 23
    booleanValue                   shift and go to state 25
    expression                     shift and go to state 50

state 23

    (69) expression -> number .

    PLUS            reduce using rule 69 (expression -> number .)
    MINUS           reduce using rule 69 (expression -> number .)
    TIMES           reduce using rule 69 (expression -> number .)
    DIVIDE          reduce using rule 69 (expression -> number .)
    MODULE          reduce using rule 69 (expression -> number .)
    AND             reduce using rule 69 (expression -> number .)
    OR              reduce using rule 69 (expression -> number .)
    LESSTHAN        reduce using rule 69 (expression -> number .)
    LESSEQUALTHAN   reduce using rule 69 (expression -> number .)
    GREATERTHAN     reduce using rule 69 (expression -> number .)
    GREATEREQUALTHAN reduce using rule 69 (expression -> number .)
    EQUALS          reduce using rule 69 (expression -> number .)
    NOTEQUALS       reduce using rule 69 (expression -> number .)
    SETUNION        reduce using rule 69 (expression -> number .)
    SETDIFF         reduce using rule 69 (expression -> number .)
    SETINTERSECT    reduce using rule 69 (expression -> number .)
    SETMAPPLUS      reduce using rule 69 (expression -> number .)
    SETMAPMINUS     reduce using rule 69 (expression -> number .)
    SETMAPTIMES     reduce using rule 69 (expression -> number .)
    SETMAPDIVIDE    reduce using rule 69 (expression -> number .)
    SETMAPMODULE    reduce using rule 69 (expression -> number .)
    BELONGSTO       reduce using rule 69 (expression -> number .)
    $end            reduce using rule 69 (expression -> number .)
    SEMICOLON       reduce using rule 69 (expression -> number .)
    WHILE           reduce using rule 69 (expression -> number .)
    ELSE            reduce using rule 69 (expression -> number .)
    COMMA           reduce using rule 69 (expression -> number .)
    MIN             reduce using rule 69 (expression -> number .)
    MAX             reduce using rule 69 (expression -> number .)
    RCURLY          reduce using rule 69 (expression -> number .)
    RPAREN          reduce using rule 69 (expression -> number .)
    DO              reduce using rule 69 (expression -> number .)


state 24
